--- a/src/components/FretboardNote.css
+++ b/src/components/FretboardNote.css
@@ -10,7 +10,8 @@
 .fret-label-above {
   position: absolute;
   top: -18px;
-  right: -12px;
+  left: 50%;
+  transform: translateX(-50%);
   font-size: 11px;
   font-weight: 600;
   color: #333;
